--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
     
     <!-- Theme Color for Mobile -->
     <meta name="theme-color" content="#EC4899" />
+
+    <!-- Hotjar Tracking Code for vibecheckhim -->
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:5304411,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
   </head>
   <body>
     <div id="root"></div>
